* Enhance Selector#match to support a "group" (comma-separated) selector. [#318 state:resolved] [Andrew Dupont, jddalton, wiktor]

* Make String#stripTags work properly with tags that contain closing brackets in their attributes. [jddalton, kangax]

* Stop Enumerable#grep, Array#grep, and String#gsub from freezing when passed an empty string as a pattern. [jddalton, kangax]

*FuseJS Alpha* (December 6, 2008)

* Add private helper method isHostObject() to correctly detect host methods and properties. [David Mark, jddalton]

* Massive code rewrite and restructuring [bkerley, jddalton, Joe Gornick, T.J. Crowder]
  - Adopt new coding pattern
  - Restructure file system to accommodate custom builds
  - Backwards compatibility change for Ajax.Responders.responders property
  - Update .gitignore files to ingore raked and temporary files
  - Adjust edge case unit tests

* unit test: Make Ajax unit tests work in Safari 2, stop Dom unit tests from crashing Opera 9.2x on OS X, and perform minor cleanup on Form and Dom unit tests. [jddalton]

* Fix Element#insert on colgroup and optgroup elements by adding entries to Element._insertionTranslations.tags. [jddalton]

* Rewrite the Element._attributeTranslations object to reduce its code size. [jddalton]

* Modify Prototype.Browser.MobileSafari to return true for iPod Touch. [#439 state:resolved] [jddalton, Olek Poplavsky]

* Make Form.serializeElements() and Form.Element.Methods.serialize() skip type="select-multiple" select elements that have no selected value. [#440 state:resolved] [jddalton, Shanrong Zhao]

* Moved browser feature/bug tests to private methods "Feature" and "Bug". [jddalton, kangax, Nick Stakenburg]

* Make use of native Array methods "every", "filter", "map" and "some" if available. [#317 state:resolved] [jddalton, fearphage]

* Drop support for Prototype created Array#reduce because it conflicts with the JavaScript 1.8 definition. [jddalton]
  Note: Backwards compatibility warning.
